# claude-code-bug-phantom-reads-17407

./: .gitignore  .wsd  CLAUDE.md  LICENSE  README.md  REPRODUCTION.md  WORKAROUND.md  pyproject.toml  wsd.py
.claude/: settings.local.json
.claude/agents/: codebase-surveyor.md  context-librarian.md  demo-presenter.md  documentation-steward.md  feature-writer.md  health-inspector.md  process-inspector.md  project-bootstrapper.md  rule-enforcer.md  task-master.md  test-guardian.md
.claude/commands/: add-dd.md  analyze-light.md  analyze-standard.md  analyze-thorough.md  analyze-wpd-doc.md  analyze-wpd.md  commit-msg.md  create-feature.md  fix-loop.md  open-ticket.md  process-prompt-log.md  refine-plan.md  setup-easy.md  setup-hard.md  setup-maxload.md  setup-medium.md  update-trial-data.md
.claude/hooks/: protect_files.py
.claude/misc/: macos-notification.sh
dev/: Scrap.xlsx
dev/archive/: Session-Analysis-Scripts-Overview.md
dev/diagnostics/: append_all_remaining.py  append_journal.py  append_tests.py  count_tokens.py  extract_tool_results.py  extract_trial_data.py  final_journal_update.py  fix_test_assertions.py  fix_violations.py  integration_tests_remaining.py  journal_qa_update.md  journal_update_execution.md  parse_session_20260119_133027.py  parse_session_20260119_133726.py  parse_session_20260119_225531.py  parse_session_20260120.py  parse_trial_20260119-140145.py  parse_trial_20260119-140906.py  parse_trial_20260119-142117.py  parse_trial_20260119_224743.py  parse_trial_20260119_230150.py  parse_trial_20260120_093130.py  parse_trial_20260120_093143.py  parse_trial_20260120_095152.py  parse_trial_20260120_095212.py  parse_trial_20260120_095232.py  parse_trial_session.py  parse_trial_session_20260119_224005.py  schema-12-sanity-check-report.md  (+6 more)
repro/: CLAUDE.md
scripts/: archive_claude_sessions.py  codedocs_javascript.js  codedocs_jsdoc.js  codedocs_pdoc.py  codedocs_python.py  codedocs_typedoc.js  codedocs_typescript.js  doc_validator_typescript.js  file_list.py  health_check.js  health_check.py  init_work_journal.sh  install_cc.sh  new_prompt.py  update_docs.py  wsd_utils.js  wsd_utils.py
src/: __init__.py  cc_version.py  collect_trials.py
tests/: __init__.py  test_cc_version.py  test_collect_trials.py
(+1289 files in other folders)
