[project]
name = "claude-code-bug-phantom-reads"
version = "0.1.0"
description = "Research project investigating Claude Code phantom read behavior"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# WSD Configuration (REQUIRED)
[tool.wsd]
check_dirs = ["src", "tests"]

[dependency-groups]
dev = [
    # Linting and formatting (REQUIRED)
    "ruff>=0.1.0",

    # Type checking (REQUIRED)
    "mypy>=1.8.0",

    # Testing (REQUIRED)
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",

    # Security scanning (optional - health check skips if missing)
    "bandit>=1.7.6",

    # Dependency auditing (optional - health check skips if missing)
    "pip-audit>=2.6.0",

    # API documentation (for wsd docs:full / codedocs_pdoc.py)
    "pdoc>=14.0.0",

    # Additional testing tools (optional)
    "pytest-watch>=4.2.0",
    "coverage>=7.0.0",
]

# Ruff Configuration
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "PL",     # Pylint
    "D",      # pydocstyle - docstring conventions
]
ignore = [
    "E501",   # Line too long (handled by formatter)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

# Mypy Configuration
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Pytest Configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

# Bandit Configuration
[tool.bandit]
exclude_dirs = ["tests", ".venv"]
